ui/style.css
/* ... */
.share:focus-within .share-details {
  display: block;
}

.share-details input {
  border: 1px solid;
  width: 100%;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.text-light {
  color: #777;
}

.text-success {
  color: #129412;
}

.text-failure {
  color: #a00505;
}

.form-group {
  padding: 10px 0;
}

.form-group-label {
  font-size: initial;
}

.form-group-children {
  padding: 10px;
}

.form-row {
  padding: 5px 0;
  min-height: 40px;
  display: flex;
  align-items: center;
}

.version {
  text-align: center;
  font-size: 0.9rem;
  color: #aaa;
  padding: 30px 0;
}

canvas {
  max-height: 100%;
  margin: 30px auto;
}

.canvas--small {
  width: 1024px !important;
  max-width: 100%;
}

.canvas--medium {
  width: 75% !important;
}

.canvas--large {
  width: 100% !important;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  background: rgba(0, 0, 0, 0.5);
}

.modal-body {
  background: white;
  border: 1px solid #ccc;
  padding: 15px;
}

.project-name {
  background: white;
  border: 1px solid #ccc;
  padding: 15px;
  margin: 15px auto;
  width: 500px;
  height: min-content;
}

.project-name .input,
.project-name .input input,
.project-name .button {
  width: 100%;
  padding: 15px;
}

.project-existing {
  border-top: 1px solid #ccc;
  padding-top: 15px;
  margin-top: 15px;
}

th {
  text-align: left;
}

tbody tr:nth-child(odd) {
  background: #f2f2f7;
}

.confirm-wrapper {
  display: inline-block;
}

.confirm {
  position: relative;
}

.confirm-popup {
  display: none;
  position: absolute;
  top: calc(100% + 5px);
  right: 0;
  z-index: 4;
  padding: 15px;
  min-width: 200px;
  background: white;
  box-shadow: 0 1px 3px 0 #aaa;
  border: 1px solid #ccc;
  font-size: 1rem;
}

.confirm-popup .button + .button {
  display: inline-block;
  margin-left: 15px;
}

.confirm-popup--open {
  display: block;
}

.confirm-popup--right {
  left: 0;
  right: unset;
}

/* These rules break cssplus */
body.dark a,
body.dark a:visited,
body.dark a:focus,
body.dark a:hover {
  color: white;
}

body.dark .alert a,
body.dark .alert a:visited,
body.dark .alert a:focus,
body.dark .alert a:hover {
  color: black;
}

body.dark .editor-container .input,
body.dark input.input:not([type='radio']),
body.dark label.input input:not([type='radio']),
body.dark select.select,
body.dark label.select select {
  background: #29293c;
  border: 1px solid black;
  color: white;
}

body.dark .server:hover,
body.dark .connector:hover,
body.dark .server--expanded,
body.dark .connector--expanded {
  background: #484860;
  border-color: black;
}

body.dark .button:hover {
  background: #383852;
}

body.dark tbody tr:nth-child(odd) {
  background: #31314e;
}
/* End cssplus break */

body.dark {
  background: #29293c;
  color: white;

  .app--desktop,
  .app--server {
    border: 0;
    height: 100%;
  }

  .alert {
    color: black;
  }

  header {
    background: #29293c;
    border-bottom-color: black;
  }

  header a {
    color: white !important;
  }

  .button {
    border: 1px solid black;
    background: #4a4a6a;
    color: #ddd;
  }

  .button.material-icons,
  .button.material-icons-outlined {
    border: 0;
    background: transparent;
    color: #999;
    padding: 0;
  }

  .button.material-icons.button--primary,
  .button.material-icons-outlined.button--primary {
    color: #bc4fff;
  }

  .page-name {
    border-right-color: black;
  }

  .page-name--current {
    background: #29293c;

    .input {
      background: #404066 !important;
    }
  }

  .section-title {
    background: #0a0a1d;
  }

  .section-title > .button {
    background: transparent !important;
    border: 0 !important;
  }

  .panel-out,
  .ace_gutter-layer {
    background: #181824;
  }

  .ace_layer.ace_marker-layer .ace_active-line {
    background: rgba(0, 0, 0, 0.5);
  }

  .panel,
  .editor {
    background: #484860;
  }

  .panel {
    border-color: black;
  }

  .editor {
    color: white;
  }

  .panel-head {
    border-bottom: 1px solid black;
    background: #31314e;
  }

  .panel-header--open {
    border-bottom: 1px solid black;
  }

  .pages {
    .button.page-name {
      border-right: 1px solid #ccc;
    }
  }

  .panel-out-header {
    background: #31314e;
  }

  .panel-out-header .button {
    background: transparent;
  }

  .panel-out-header .button.selected {
    background: #181824;
    color: white;
  }

  label,
  .radio-label,
  .input-label,
  .select-label,
  .text-muted,
  .title {
    color: #999;
  }

  .toggle .toggle-container {
    border-color: black;
  }

  .toggle .toggle-mover {
    background: #999;
  }

  .sidebar {
    background: #31314e;
    border-right-color: black;
    border-bottom-color: black;
  }

  .server,
  .connector {
    border-bottom-color: black;
    color: white;
  }

  .confirm-popup {
    background: #29293c;
    color: white;
    border-color: black;
    box-shadow: 0 1px 3px 0 #111;
  }
}

